Published multiple files

--- a/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/20th.md
+++ b/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/20th.md
@@ -4,7 +4,7 @@
 
 # The Grand Hall of Naphae
 
-![the grand hall of naphae.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/the%20grand%20hall%20of%20naphae.png)
+![20th level Grand Hall.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/20th%20level%20Grand%20Hall.png)
 
 Words aren't something I struggle with. But Naphae silenced me when I finally reached the base of Ragathan's Tower. The Grand Hall is a pedestrian name for it. I call it The Hall of Knowing. It knows your name. And it knows you struggle to name it in return. A feeling. A wind in your heart. The smell of an old book. The quiet of sunrise. The power of a crashing wave. 
 
