--- a/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/19th.md
+++ b/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/19th.md
@@ -2,3 +2,5 @@
 {"dg-publish":true,"permalink":"/the-talisman-campaign/locations/the-sunken-spire/levels-players/19th/","noteIcon":""}
 ---
 
+# The Second Floor Grand Hall
+![19th Level Grand Hall.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/19th%20Level%20Grand%20Hall.png)
