Published multiple files

--- a/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/10th.md
+++ b/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/10th.md
@@ -2,3 +2,7 @@
 {"dg-publish":true,"permalink":"/the-talisman-campaign/locations/the-sunken-spire/levels-players/10th/","noteIcon":""}
 ---
 
+![10threstricted2.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/10threstricted2.png)
+
+
+Restricted Containment Level 2.
