--- a/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/13th.md
+++ b/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/13th.md
@@ -2,3 +2,5 @@
 {"dg-publish":true,"permalink":"/the-talisman-campaign/locations/the-sunken-spire/levels-players/13th/","noteIcon":""}
 ---
 
+![13thbronze.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/13thbronze.png)
+Bronze Administration Offices.
