--- a/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/14th.md
+++ b/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/14th.md
@@ -2,3 +2,9 @@
 {"dg-publish":true,"permalink":"/the-talisman-campaign/locations/the-sunken-spire/levels-players/14th/","noteIcon":""}
 ---
 
+![14thHortonhall.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/14thHortonhall.png)
+Hortonhall. Monk Class.
+
+![14thErgamot.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/14thErgamot.png)
+Ergamot. Fighter Class.
+
