Published multiple files

--- a/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/17th.md
+++ b/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/17th.md
@@ -2,3 +2,8 @@
 {"dg-publish":true,"permalink":"/the-talisman-campaign/locations/the-sunken-spire/levels-players/17th/","noteIcon":""}
 ---
 
+![17thDenvoxin.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/17thDenvoxin.png)
+Denvoxin Sanctum. Cleric Class.
+
+![17thGlory.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/17thGlory.png)
+Glory Assembly. Paladin Class.
