--- a/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/14th.md
+++ b/src/site/notes/The Talisman Campaign/Locations/The Sunken Spire/Levels (Players)/14th.md
@@ -3,8 +3,8 @@
 ---
 
 ![14thHortonhall.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/14thHortonhall.png)
-Hortonhall. Monk Class.
+Hortonhall Meditation Chamber. Monk Class.
 
 ![14thErgamot.png](/img/user/The%20Talisman%20Campaign/Locations/The%20Sunken%20Spire/Levels%20(Players)/14thErgamot.png)
-Ergamot. Fighter Class.
+Ergamot Dojo. Fighter Class.
 
